# phaseshift

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
examples/: clements_example.py  fourier_decomposition.ipynb  lplm_example.ipynb
src/phaseshift/: __init__.py  bell_interferometer.py  clements_interferometer.py  fourier_interferometer.py  lplm_interferometer.py  matrix_operations.py
src/phaseshift/optimization/: __init__.py  fourier_optimizer.py  jax_optimizer.py
src/phaseshift/plot/: __init__.py  clements_plot.py  phases_plot.py
src/udecomp/: __init__.py
src/udecomp/optimization/: __init__.py  fourier_optimizer.py  jax_optimizer.py
src/udecomp/plot/: __init__.py  clements_plot.py  phases_plot.py
src/unitary_decomp/: __init__.py
src/unitary_decomp/optimization/: __init__.py  fourier_optimizer.py  jax_optimizer.py
src/unitary_decomp/plot/: __init__.py  clements_plot.py  phases_plot.py
tests/: test_bell_interferometer.py  test_clements_interferometer.py  test_fourier_interferometer.py  test_fourier_optimizer.py  test_jax_optimizer.py  test_lplm_interferometer.py  test_matrix_operations.py
