[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unitary_decomp"
dynamic = ["version"]
description = "Decompositions and approximations of linear optical unitaries."
authors = [
    { name="Vincent Girouard", email="vincent-2.girouard@polymtl.ca" },
    { name="Nicolás Quesada", email="nicolas.quesada@polymtl.ca" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "jax>=0.7.0",
    "optax>=0.2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "black>=23.0",
    "isort",
]

[project.urls]
Homepage = "https://github.com/polyquantique/Unitary-Decomp"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]  
version = {attr = "unitary_decomp.__version__"}
